magnify.cash -> magnify cash

--- a/dapp-v1/index.html
+++ b/dapp-v1/index.html
@@ -8,7 +8,7 @@
 
     <!-- Meta Tags -->
     <!-- Primary Meta Tags -->
-    <title>Magnify.Cash</title>
+    <title>Magnify Cash</title>
     <link rel="icon" href="/theme/magnify-cash-logo.jpeg">
     <meta name="title" content="Magnify.Cash">
     <meta name="description" content="Decentralized credit market">
