--- a/integration/index.html
+++ b/integration/index.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>MagnifyLendingKeysV1 - Magnify Cash</title>
+        <title>❱ integration - Magnify Cash</title>
 
 
         <!-- Custom HTML head -->
@@ -12,31 +12,31 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="icon" href="../../../favicon.svg">
-        <link rel="shortcut icon" href="../../../favicon.png">
-        <link rel="stylesheet" href="../../../css/variables.css">
-        <link rel="stylesheet" href="../../../css/general.css">
-        <link rel="stylesheet" href="../../../css/chrome.css">
-        <link rel="stylesheet" href="../../../css/print.css" media="print">
+        <link rel="icon" href="../favicon.svg">
+        <link rel="shortcut icon" href="../favicon.png">
+        <link rel="stylesheet" href="../css/variables.css">
+        <link rel="stylesheet" href="../css/general.css">
+        <link rel="stylesheet" href="../css/chrome.css">
+        <link rel="stylesheet" href="../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="../../../FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="../../../fonts/fonts.css">
+        <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="../../../highlight.css">
-        <link rel="stylesheet" href="../../../tomorrow-night.css">
-        <link rel="stylesheet" href="../../../ayu-highlight.css">
+        <link rel="stylesheet" href="../highlight.css">
+        <link rel="stylesheet" href="../tomorrow-night.css">
+        <link rel="stylesheet" href="../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
-        <link rel="stylesheet" href="../../../book.css">
+        <link rel="stylesheet" href="../book.css">
 
     </head>
     <body class="sidebar-visible no-js">
     <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
-            var path_to_root = "../../../";
+            var path_to_root = "../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item "><a href="../../../index.html">Home</a></li><li class="chapter-item affix "><li class="part-title">Reference Guide</li><li class="chapter-item "><a href="../../../contracts/contracts/interfaces/index.html">❱ interfaces</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../../contracts/contracts/interfaces/IMagnifyCashV1.sol/contract.IMagnifyCashV1.html">IMagnifyCashV1</a></li><li class="chapter-item "><a href="../../../contracts/contracts/interfaces/IMagnifyERC721V1.sol/contract.IMagnifyERC721V1.html">IMagnifyERC721V1</a></li></ol></li><li class="chapter-item expanded "><a href="../../../contracts/contracts/index.html">❱ contracts</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../../contracts/contracts/MagnifyCashV1.sol/contract.MagnifyCashV1.html">MagnifyCashV1</a></li><li class="chapter-item "><a href="../../../contracts/contracts/MagnifyERC721V1.sol/contract.MagnifyERC721V1.html">MagnifyERC721V1</a></li><li class="chapter-item expanded "><a href="../../../contracts/contracts/MagnifyLendingKeysV1.sol/contract.MagnifyLendingKeysV1.html" class="active">MagnifyLendingKeysV1</a></li><li class="chapter-item "><a href="../../../contracts/contracts/MagnifyObligationNotesV1.sol/contract.MagnifyObligationNotesV1.html">MagnifyObligationNotesV1</a></li></ol></li><li class="chapter-item "><li class="part-title">Developer Guide</li><li class="chapter-item "><a href="../../../integration/index.html">❱ integration</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../../integration/basic-integration.html">Basic Integration</a></li><li class="chapter-item "><a href="../../../integration/advanced-integration.html">Advanced Integration</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item "><a href="../index.html">Home</a></li><li class="chapter-item affix "><li class="part-title">Reference Guide</li><li class="chapter-item "><a href="../contracts/contracts/interfaces/index.html">❱ interfaces</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../contracts/contracts/interfaces/IMagnifyCashV1.sol/contract.IMagnifyCashV1.html">IMagnifyCashV1</a></li><li class="chapter-item "><a href="../contracts/contracts/interfaces/IMagnifyERC721V1.sol/contract.IMagnifyERC721V1.html">IMagnifyERC721V1</a></li></ol></li><li class="chapter-item "><a href="../contracts/contracts/index.html">❱ contracts</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../contracts/contracts/MagnifyCashV1.sol/contract.MagnifyCashV1.html">MagnifyCashV1</a></li><li class="chapter-item "><a href="../contracts/contracts/MagnifyERC721V1.sol/contract.MagnifyERC721V1.html">MagnifyERC721V1</a></li><li class="chapter-item "><a href="../contracts/contracts/MagnifyLendingKeysV1.sol/contract.MagnifyLendingKeysV1.html">MagnifyLendingKeysV1</a></li><li class="chapter-item "><a href="../contracts/contracts/MagnifyObligationNotesV1.sol/contract.MagnifyObligationNotesV1.html">MagnifyObligationNotesV1</a></li></ol></li><li class="chapter-item "><li class="part-title">Developer Guide</li><li class="chapter-item expanded "><a href="../integration/index.html" class="active">❱ integration</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../integration/basic-integration.html">Basic Integration</a></li><li class="chapter-item "><a href="../integration/advanced-integration.html">Advanced Integration</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -145,7 +145,7 @@
                     <h1 class="menu-title">Magnify Cash</h1>
 
                     <div class="right-buttons">
-                        <a href="../../../print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
                         <a href="https://github.com/Magnify-Cash/magnify-monorepo" title="Git repository" aria-label="Git repository">
@@ -177,25 +177,21 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="magnifylendingkeysv1"><a class="header" href="#magnifylendingkeysv1">MagnifyLendingKeysV1</a></h1>
-<p><a href="https://github.com/Magnify-Cash/magnify-monorepo/blob/83f7c34f9b7f31d25f317e1b417033ab222d09b0/contracts/contracts/MagnifyLendingKeysV1.sol">Git Source</a></p>
-<p><strong>Inherits:</strong>
-<a href="/contracts/contracts/MagnifyERC721V1.sol/contract.MagnifyERC721V1.html">MagnifyERC721V1</a></p>
-<h2 id="functions"><a class="header" href="#functions">Functions</a></h2>
-<h3 id="constructor"><a class="header" href="#constructor">constructor</a></h3>
-<pre><code class="language-solidity">constructor(string memory _name, string memory _symbol, string memory _baseURI, address _initialOwner)
-    MagnifyERC721V1(_name, _symbol, _baseURI, _initialOwner);
-</code></pre>
+                        <h1 id="contents"><a class="header" href="#contents">Contents</a></h1>
+<ul>
+<li><a href="basic-integration.html">Basic Integration</a></li>
+<li><a href="advanced-integration.html">Advanced Integration</a></li>
+</ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../../../contracts/contracts/MagnifyERC721V1.sol/contract.MagnifyERC721V1.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../contracts/contracts/MagnifyObligationNotesV1.sol/contract.MagnifyObligationNotesV1.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../../../contracts/contracts/MagnifyObligationNotesV1.sol/contract.MagnifyObligationNotesV1.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../integration/basic-integration.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -205,11 +201,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../../../contracts/contracts/MagnifyERC721V1.sol/contract.MagnifyERC721V1.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../contracts/contracts/MagnifyObligationNotesV1.sol/contract.MagnifyObligationNotesV1.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../../../contracts/contracts/MagnifyObligationNotesV1.sol/contract.MagnifyObligationNotesV1.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../integration/basic-integration.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
@@ -224,16 +220,16 @@
         </script>
 
 
-        <script src="../../../elasticlunr.min.js"></script>
-        <script src="../../../mark.min.js"></script>
-        <script src="../../../searcher.js"></script>
+        <script src="../elasticlunr.min.js"></script>
+        <script src="../mark.min.js"></script>
+        <script src="../searcher.js"></script>
 
-        <script src="../../../clipboard.min.js"></script>
-        <script src="../../../highlight.js"></script>
-        <script src="../../../book.js"></script>
+        <script src="../clipboard.min.js"></script>
+        <script src="../highlight.js"></script>
+        <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
-        <script src="../../../solidity.min.js"></script>
+        <script src="../solidity.min.js"></script>
 
 
     </div>
