--- a/print.html
+++ b/print.html
@@ -90,7 +90,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item "><a href="index.html">Home</a></li><li class="chapter-item affix "><li class="part-title">contracts</li><li class="chapter-item "><a href="contracts/contracts/index.html">❱ contracts</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="contracts/contracts/interfaces/index.html">❱ interfaces</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="contracts/contracts/interfaces/IMagnifyCashV1.sol/contract.IMagnifyCashV1.html">IMagnifyCashV1</a></li><li class="chapter-item "><a href="contracts/contracts/interfaces/IMagnifyERC721V1.sol/contract.IMagnifyERC721V1.html">IMagnifyERC721V1</a></li></ol></li><li class="chapter-item "><a href="contracts/contracts/MagnifyCashV1.sol/contract.MagnifyCashV1.html">MagnifyCashV1</a></li><li class="chapter-item "><a href="contracts/contracts/MagnifyERC721V1.sol/contract.MagnifyERC721V1.html">MagnifyERC721V1</a></li><li class="chapter-item "><a href="contracts/contracts/MagnifyLendingKeysV1.sol/contract.MagnifyLendingKeysV1.html">MagnifyLendingKeysV1</a></li><li class="chapter-item "><a href="contracts/contracts/MagnifyObligationNotesV1.sol/contract.MagnifyObligationNotesV1.html">MagnifyObligationNotesV1</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item "><a href="index.html">Home</a></li><li class="chapter-item affix "><li class="part-title">Reference Guide</li><li class="chapter-item "><a href="contracts/contracts/interfaces/index.html">❱ interfaces</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="contracts/contracts/interfaces/IMagnifyCashV1.sol/contract.IMagnifyCashV1.html">IMagnifyCashV1</a></li><li class="chapter-item "><a href="contracts/contracts/interfaces/IMagnifyERC721V1.sol/contract.IMagnifyERC721V1.html">IMagnifyERC721V1</a></li></ol></li><li class="chapter-item "><a href="contracts/contracts/index.html">❱ contracts</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="contracts/contracts/MagnifyCashV1.sol/contract.MagnifyCashV1.html">MagnifyCashV1</a></li><li class="chapter-item "><a href="contracts/contracts/MagnifyERC721V1.sol/contract.MagnifyERC721V1.html">MagnifyERC721V1</a></li><li class="chapter-item "><a href="contracts/contracts/MagnifyLendingKeysV1.sol/contract.MagnifyLendingKeysV1.html">MagnifyLendingKeysV1</a></li><li class="chapter-item "><a href="contracts/contracts/MagnifyObligationNotesV1.sol/contract.MagnifyObligationNotesV1.html">MagnifyObligationNotesV1</a></li></ol></li><li class="chapter-item "><li class="part-title">Developer Guide</li><li class="chapter-item "><a href="integration/index.html">❱ integration</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="integration/basic-integration.html">Basic Integration</a></li><li class="chapter-item "><a href="integration/advanced-integration.html">Advanced Integration</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -202,14 +202,6 @@
 <li>Admin Functions: Implements the admin functionality of the contract, such as setting loan origination fees, withdrawing platform fees, and pausing/unpausing the protocol.</li>
 </ol>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="contents"><a class="header" href="#contents">Contents</a></h1>
-<ul>
-<li><a href="contracts/contracts//contracts/contracts/interfaces">interfaces</a></li>
-<li><a href="contracts/contracts/MagnifyCashV1.sol/contract.MagnifyCashV1.html">MagnifyCashV1</a></li>
-<li><a href="contracts/contracts/MagnifyERC721V1.sol/contract.MagnifyERC721V1.html">MagnifyERC721V1</a></li>
-<li><a href="contracts/contracts/MagnifyLendingKeysV1.sol/contract.MagnifyLendingKeysV1.html">MagnifyLendingKeysV1</a></li>
-<li><a href="contracts/contracts/MagnifyObligationNotesV1.sol/contract.MagnifyObligationNotesV1.html">MagnifyObligationNotesV1</a></li>
-</ul>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="contents-1"><a class="header" href="#contents-1">Contents</a></h1>
 <ul>
 <li><a href="contracts/contracts/interfaces/IMagnifyCashV1.sol/contract.IMagnifyCashV1.html">IMagnifyCashV1</a></li>
 <li><a href="contracts/contracts/interfaces/IMagnifyERC721V1.sol/contract.IMagnifyERC721V1.html">IMagnifyERC721V1</a></li>
@@ -437,6 +429,13 @@ IERC721</p>
 <h3 id="burn"><a class="header" href="#burn">burn</a></h3>
 <pre><code class="language-solidity">function burn(uint256 tokenId) external;
 </code></pre>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="contents-1"><a class="header" href="#contents-1">Contents</a></h1>
+<ul>
+<li><a href="contracts/contracts/MagnifyCashV1.sol/contract.MagnifyCashV1.html">MagnifyCashV1</a></li>
+<li><a href="contracts/contracts/MagnifyERC721V1.sol/contract.MagnifyERC721V1.html">MagnifyERC721V1</a></li>
+<li><a href="contracts/contracts/MagnifyLendingKeysV1.sol/contract.MagnifyLendingKeysV1.html">MagnifyLendingKeysV1</a></li>
+<li><a href="contracts/contracts/MagnifyObligationNotesV1.sol/contract.MagnifyObligationNotesV1.html">MagnifyObligationNotesV1</a></li>
+</ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="magnifycashv1"><a class="header" href="#magnifycashv1">MagnifyCashV1</a></h1>
 <p><a href="https://github.com/Magnify-Cash/magnify-monorepo/blob/83f7c34f9b7f31d25f317e1b417033ab222d09b0/contracts/contracts/MagnifyCashV1.sol">Git Source</a></p>
 <p><strong>Inherits:</strong>
@@ -906,6 +905,213 @@ ERC721, Ownable</p>
 <h3 id="constructor-3"><a class="header" href="#constructor-3">constructor</a></h3>
 <pre><code class="language-solidity">constructor(string memory _name, string memory _symbol, string memory _baseURI, address _initialOwner)
     MagnifyERC721V1(_name, _symbol, _baseURI, _initialOwner);
+</code></pre>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="contents-2"><a class="header" href="#contents-2">Contents</a></h1>
+<ul>
+<li><a href="integration/basic-integration.html">Basic Integration</a></li>
+<li><a href="integration/advanced-integration.html">Advanced Integration</a></li>
+</ul>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="magnifycashv1-integration-guide"><a class="header" href="#magnifycashv1-integration-guide">MagnifyCashV1 Integration Guide</a></h1>
+<p>Welcome to the MagnifyCashV1 Integration Guide! This document is designed to help developers seamlessly integrate their applications with the Magnify Cash protocol. MagnifyCashV1 is a smart contract protocol that facilitates lending and borrowing of ERC20 tokens using NFTs as collateral. The protocol is built with a focus on being fully on-chain, non-custodial, and independent of external oracles and intermediaries.</p>
+<h2 id="integration-steps"><a class="header" href="#integration-steps">Integration Steps</a></h2>
+<p>Integrating your application with MagnifyCashV1 is developer-friendly, offering flexibility in choosing the Ethereum RPC stack that suits your preferences. Below are the steps for lenders and borrowers:</p>
+<h3 id="for-lenders"><a class="header" href="#for-lenders">For Lenders</a></h3>
+<p><strong>Step 1: Create Lending Desk</strong></p>
+<p>Use the <code>initializeNewLendingDesk</code> function to establish a new lending desk within the Magnify Cash protocol. This enables you to define your lending parameters and get ready to offer loans.</p>
+<p>JavaScript/TypeScript (using ethers.js) - Example:</p>
+<pre><code class="language-javascript">const initializeNewLendingDesk = async () =&gt; {
+  // Connect to Ethereum network using ethers.js
+  const provider = new ethers.providers.JsonRpcProvider('YOUR_RPC_URL');
+  const signer = provider.getSigner();
+
+  // Instantiate MagnifyCashV1 contract
+  const contract = new ethers.Contract('MagnifyCashV1_CONTRACT_ADDRESS', MagnifyCashV1_ABI, signer);
+
+  // Prepare the inputs (erc20ToLoan, initialFundingAmount, loanConfigs)
+  const erc20ToLoan = "0x..."
+  const initialFundingAmount = 100
+  const loanConfigs = [{
+    nftCollection: erc721.address,
+    minAmount: ethers.utils.parseUnits("10", 18),
+    maxAmount: ethers.utils.parseUnits("100", 18),
+    minDuration: BigNumber.from(24),
+    maxDuration: BigNumber.from(240),
+    minInterest: BigNumber.from(200),
+    maxInterest: BigNumber.from(1500),
+  }];
+
+  // Call the initializeNewLendingDesk function
+  const tx = await contract.initializeNewLendingDesk(erc20ToLoan, initialFundingAmount, loanConfigs);
+  await tx.wait();
+
+  console.log('Lending desk created successfully!');
+};
+</code></pre>
+<p>Python (using web3.py) - Example:</p>
+<pre><code class="language-python">from web3 import Web3
+
+w3 = Web3(Web3.HTTPProvider('YOUR_RPC_URL'))
+
+# Get contract
+contract = w3.eth.contract(address='MagnifyCashV1_CONTRACT_ADDRESS', abi=MagnifyCashV1_ABI)
+
+# Prepare the inputs (erc20ToLoan, initialFundingAmount, loanConfigs)
+erc20ToLoan = "0x..."
+initialFundingAmount = 100
+loanConfigs = [{
+  nftCollection: erc721.address,
+  minAmount: 1,
+  maxAmount: 100,
+  minDuration: 30,
+  maxDuration: 120,
+  minInterest: 100,
+  maxInterest: 1000,
+}];
+
+# Call the initializeNewLendingDesk function
+tx_hash = contract.functions.initializeNewLendingDesk(
+  erc20ToLoan,
+  initialFundingAmount,
+  loanConfigs
+).transact()
+tx_receipt = w3.eth.waitForTransactionReceipt(tx_hash)
+
+print('Lending desk created successfully!')
+</code></pre>
+<h3 id="for-borrowers"><a class="header" href="#for-borrowers">For Borrowers</a></h3>
+<p><strong>Step 1: Initialize Loan</strong></p>
+<p>Borrowers can create loans against ERC20 tokens by providing NFT collateral through the <code>initializeNewLoan</code> function. This process is straightforward and requires minimal effort from borrowers.</p>
+<p>JavaScript/TypeScript (using ethers.js) - Example:</p>
+<pre><code class="language-javascript">const initializeNewLoan = async () =&gt; {
+  // Connect to Ethereum network using ethers.js
+  const provider = new ethers.providers.JsonRpcProvider('YOUR_RPC_URL');
+  const signer = provider.getSigner();
+
+  // Instantiate MagnifyCashV1 contract
+  const contract = new ethers.Contract('MagnifyCashV1_CONTRACT_ADDRESS', MagnifyCashV1_ABI, signer);
+
+  // call with parameters
+  const _lendingDeskId = BigNumber.from(1);
+  const _nftCollection = "0x..";
+  const _nftId = BigNumber.from(1001)
+  const _duration = BigNumber.from(30);
+  const _amount = ethers.utils.parseUnits("50", 18);
+
+  const tx = await contract.initializeNewLoan(
+   _lendingDeskId,
+   _nftCollection,
+   _nftId,
+   _duration,
+   _amount,
+  );
+  await tx.wait();
+
+  console.log('Loan initialized successfully!');
+};
+</code></pre>
+<p>Python (using web3.py) - Example:</p>
+<pre><code class="language-python">from web3 import Web3
+
+w3 = Web3(Web3.HTTPProvider('YOUR_RPC_URL'))
+
+# Get contract
+contract = w3.eth.contract(address='MagnifyCashV1_CONTRACT_ADDRESS', abi=MagnifyCashV1_ABI)
+
+# call with params
+_lendingDeskId = 1
+_nftCollection = "0x.."
+_nftId = 101
+_duration = 30
+_amount = 50
+
+tx_hash = contract.functions.initializeNewLoan(
+  _lendingDeskId,
+  _nftCollection,
+  _nftId,
+  _duration,
+  _amount,
+).transact()
+tx_receipt = w3.eth.waitForTransactionReceipt(tx_hash)
+
+print('Lending desk created successfully!')
+</code></pre>
+<h2 id="best-practices"><a class="header" href="#best-practices">Best Practices</a></h2>
+<ul>
+<li></li>
+<li></li>
+<li></li>
+</ul>
+<h2 id="troubleshooting"><a class="header" href="#troubleshooting">Troubleshooting</a></h2>
+<p>Hop into the discord!</p>
+<h2 id="read-more"><a class="header" href="#read-more">Read More</a></h2>
+<p>For more in-depth information on the Magnify Cash protocol, contract interactions, and advanced features, please refer to the documentation in the <code>/contracts</code> directory.</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="advanced-integration-with-magnify-cash"><a class="header" href="#advanced-integration-with-magnify-cash">Advanced Integration with Magnify Cash</a></h1>
+<p>In this section, we will extend the basic integration to fetch and display data from the Magnify Cash protocol using the Magnify Cash subgraph. Similar to the previous example, we will use React for the web interface and Apollo Client to send queries to the subgraph. Let's get started!</p>
+<h2 id="setting-up-the-environment"><a class="header" href="#setting-up-the-environment">Setting Up the Environment</a></h2>
+<p>First, ensure you have set up your React application as shown in the previous section. If you haven't done that yet, follow the steps mentioned there to create a new React app and set up Apollo Client.</p>
+<h2 id="graphql-client-for-magnify-cash"><a class="header" href="#graphql-client-for-magnify-cash">GraphQL Client for Magnify Cash</a></h2>
+<p>Just like before, we need to set up a middleware to make requests to the Magnify Cash subgraph. Replace the existing imports in your <code>App.js</code> file with the following code:</p>
+<pre><code class="language-jsx">import React from 'react';
+import './App.css';
+import { ApolloClient } from 'apollo-client';
+import { InMemoryCache } from 'apollo-cache-inmemory';
+import { HttpLink } from 'apollo-link-http';
+
+export const client = new ApolloClient({
+  link: new HttpLink({
+	uri: 'https://api.thegraph.com/subgraphs/name/nftyfinance/nftyfinance-v1',
+  }),
+  cache: new InMemoryCache(),
+});
+
+function App() {
+  return &lt;div&gt;&lt;/div&gt;;
+}
+
+export default App;
+</code></pre>
+<p>Here, we have updated the <code>uri</code> to point to the Magnify Cash subgraph instead of the Magnify Cash subgraph.</p>
+<h2 id="writing-the-queries-for-magnify-cash"><a class="header" href="#writing-the-queries-for-magnify-cash">Writing the Queries for Magnify Cash</a></h2>
+<p>Next, let's define the queries to fetch data from the Magnify Cash protocol. We will retrieve information about Magnify Cash contracts, lending desks, and active loans. Add the following code below the imports in <code>App.js</code>:</p>
+<pre><code class="language-jsx">import gql from 'graphql-tag';
+
+const LENDING_DESKS_QUERY = gql`
+  query lendingDesks {
+	lendingDesks {
+	  id
+	  name
+	  totalLiquidity
+	  availableLiquidity
+	  minimumCollateralizationRatio
+	  liquidationPenalty
+	  borrowInterestRate
+	}
+  }
+`;
+
+const ACTIVE_LOANS_QUERY = gql`
+  query activeLoans {
+	activeLoans {
+	  id
+	  borrower
+	  lendingDesk {
+		id
+	  }
+	  collateral
+	  collateralizationRatio
+	  debt
+	  borrowInterestRate
+	  loanStartTime
+	  loanDuration
+	  status
+	}
+  }
+`;
+</code></pre>
+<p>These queries will fetch data about all lending desks and active loans in the Magnify Cash protocol.</p>
+<h2 id="fetching-and-displaying-data"><a class="header" href="#fetching-and-displaying-data">Fetching and Displaying Data</a></h2>
+<p>We will use the <code>useQuery</code> hook to fetch and display data about the lending desks and active loans. Replace the content of the <code>App</code> function with the following code:</p>
+<pre><code class="language-jsx">todo...
 </code></pre>
 
                     </main>
