deploy: fd0c5a6990656597c2ea6271f5f08a41a9fc4d89

--- a/contracts/contracts/MagnifyCashV1.sol/contract.MagnifyCashV1.html
+++ b/contracts/contracts/MagnifyCashV1.sol/contract.MagnifyCashV1.html
@@ -30,6 +30,8 @@
 
         <!-- Custom theme stylesheets -->
         <link rel="stylesheet" href="../../../book.css">
+        <link rel="stylesheet" href="../../../theme/css/general.css">
+        <link rel="stylesheet" href="../../../theme/css/variables.css">
 
     </head>
     <body class="sidebar-visible no-js">
