--- a/contracts/contracts/interfaces/index.html
+++ b/contracts/contracts/interfaces/index.html
@@ -30,6 +30,8 @@
 
         <!-- Custom theme stylesheets -->
         <link rel="stylesheet" href="../../../book.css">
+        <link rel="stylesheet" href="../../../theme/css/general.css">
+        <link rel="stylesheet" href="../../../theme/css/variables.css">
 
     </head>
     <body class="sidebar-visible no-js">
