--- a/contracts/contracts/index.html
+++ b/contracts/contracts/index.html
@@ -179,12 +179,13 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="contents"><a class="header" href="#contents">Contents</a></h1>
+                        <h2 id="contracts"><a class="header" href="#contracts">Contracts</a></h2>
+<p>The MagnifyCash protocol consists of a single core contract and several peripheral contracts. Below is the contract structure:</p>
 <ul>
-<li><a href="MagnifyCashV1.sol/contract.MagnifyCashV1.html">MagnifyCashV1</a></li>
-<li><a href="MagnifyERC721V1.sol/contract.MagnifyERC721V1.html">MagnifyERC721V1</a></li>
-<li><a href="MagnifyLendingKeysV1.sol/contract.MagnifyLendingKeysV1.html">MagnifyLendingKeysV1</a></li>
-<li><a href="MagnifyObligationNotesV1.sol/contract.MagnifyObligationNotesV1.html">MagnifyObligationNotesV1</a></li>
+<li><a href="contracts/contracts/MagnifyCashV1.sol/contract.MagnifyCashV1.html"><code>MagnifyCashV1.sol</code></a>: Core protocol module.</li>
+<li><a href="contracts/contracts/MagnifyERC721V1.sol/contract.MagnifyERC721V1.html"><code>MagnifyERC721.sol</code></a>: Abstract ERC721 with built-in roles.</li>
+<li><a href="contracts/contracts/MagnifyLendingKeysV1.sol/contract.MagnifyLendingKeysV1.html"><code>MagnifyLendingKeysV1.sol</code></a>: Lending desk NFT, tokenizing lending desk ownership.</li>
+<li><a href="contracts/contracts/MagnifyObligationNotesV1.sol/contract.MagnifyObligationNotesV1.html"><code>MagnifyObligationNotesV1.sol</code></a>: Obligation note NFT, tokenizing a borrower's obligation to repay the loan.</li>
 </ul>
 
                     </main>
