--- a/contracts/contracts/interfaces/index.html
+++ b/contracts/contracts/interfaces/index.html
@@ -179,10 +179,11 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="contents"><a class="header" href="#contents">Contents</a></h1>
+                        <h1 id="interfaces"><a class="header" href="#interfaces">Interfaces</a></h1>
+<p>The MagnifyCash protocol utilizes two main interface files.</p>
 <ul>
-<li><a href="IMagnifyCashV1.sol/contract.IMagnifyCashV1.html">IMagnifyCashV1</a></li>
-<li><a href="IMagnifyERC721V1.sol/contract.IMagnifyERC721V1.html">IMagnifyERC721V1</a></li>
+<li><a href="IMagnifyCashV1.sol/contract.IMagnifyCashV1.html">IMagnifyCashV1</a>: Interface for core protocol module.</li>
+<li><a href="IMagnifyERC721V1.sol/contract.IMagnifyERC721V1.html">IMagnifyERC721V1</a>: Interface for ERC721 tokenization, used in both the lending keys and the obligation notes</li>
 </ul>
 
                     </main>
